--- a/src/componentes/Inicio/homeStyles.module.css
+++ b/src/componentes/Inicio/homeStyles.module.css
@@ -1,10 +1,28 @@
 .container_home {
   width: 100%;
   height: 100%;
-  /* background-color: rebeccapurple; */
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.container_div_home_dark {
+  background-color: var(--darkTheme);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.container_div_home_light {
+  background-color: var(--lightTheme);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .container_div_home {
@@ -16,5 +34,16 @@
   gap: 12px;
   padding: 10px;
   border-radius: 6px;
+  margin-top: 70px;
   box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.2);
+  margin-bottom: 30px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.darkTheme {
+  background-color: var(--darkThemeThings);
+}
+
+.lightTheme {
+  background-color: var(--lightThemeThings);
 }
