--- a/src/componentes/header/navbarStyles.module.css
+++ b/src/componentes/header/navbarStyles.module.css
@@ -1,89 +1,99 @@
-
 .header {
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center ;
-    
-    gap: 30px;
-    margin-bottom: 30px;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
-    
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  gap: 30px;
+  position: fixed;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+.header_dark {
+  background-color: var(--darkTheme);
+}
+
+.header_light {
+  background-color: var(--lightTheme);
+}
 .header_main {
-    width: 200px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    
+  width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
 }
 
 .header_main img {
-    width: 35px;
-    height: 35px;
-    padding-bottom: 3px;
-    
+  width: auto;
+  height: 35px;
+  padding-bottom: 3px;
 }
 
 .header_main h1 {
-    margin: 0;
-    font-size: 32px;
-    color: #FFF;
-    
-    
+  margin: 0;
+  font-size: 32px;
+  color: #fff;
 }
 
-
-
-
-
 .header_span_color_red {
-    color: #fff;
+  color: #fff;
 }
 
 .header_input {
-    width: 200px;
-    height: 30px;
-    border-radius: 8px;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    transition: box-shadow 0.6s ease;
-    border: 1px solid rgba(61, 57, 57, 0.2);
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  width: 200px;
+  height: 30px;
+  border-radius: 8px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  transition: box-shadow 0.6s ease;
+  border: 1px solid rgba(61, 57, 57, 0.2);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .header_input:hover {
-    box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.2);
+  box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.2);
 }
 
 .header_input input {
-    width: 150px;
-    height: 30px;
-    background-color: transparent;
-    border: none;
-    color: black;
-    
+  width: 150px;
+  height: 30px;
+  background-color: transparent;
+  border: none;
+  color: black;
 }
 
 .header_input input:hover {
-    text-decoration: none;
-    border: none;
+  text-decoration: none;
+  border: none;
 }
 
 input:focus {
-    outline: none;  
-    box-shadow: none; 
+  outline: none;
+  box-shadow: none;
 }
 
 .header_icon_search {
-    width: 42px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 42px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_icon_theme {
+  background: none;
+  border: none;
+  width: 32px;
+  height: 32px;
+  margin: 0;
+  padding: 2px;
+}
+
+.header_icon_theme:hover {
+  opacity: 0.5;
 }
