--- a/src/appStyles.module.css
+++ b/src/appStyles.module.css
@@ -1,4 +1,14 @@
 .container_app {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  box-sizing: border-box;
+}
+
+.darkTheme {
+  background-color: var(--darkTheme);
+}
+
+.lightTheme {
+  background-color: var(--lightTheme);
 }
