--- a/src/componentes/Inicio/homeStyles.module.css
+++ b/src/componentes/Inicio/homeStyles.module.css
@@ -9,7 +9,7 @@
 .container_div_home_dark {
   background-color: var(--darkTheme);
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,7 +18,7 @@
 .container_div_home_light {
   background-color: var(--lightTheme);
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,12 +29,11 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  background-color: rgb(245, 245, 245);
   width: 1100px;
   gap: 12px;
   padding: 10px;
   border-radius: 6px;
-  margin-top: 70px;
+  margin-top: 20px;
   box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
   transition: background-color 0.3s ease, color 0.3s ease;
