--- a/src/componentes/header/navbarStyles.module.css
+++ b/src/componentes/header/navbarStyles.module.css
@@ -4,9 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
   gap: 30px;
-  position: fixed;
+  position: relative;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease, color 0.3s ease;
 }
