--- a/src/componentes/Inicio/homeStyles.module.css
+++ b/src/componentes/Inicio/homeStyles.module.css
@@ -29,13 +29,13 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 1100px;
-  gap: 12px;
-  padding: 10px;
-  border-radius: 6px;
-  margin-top: 20px;
-  box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.2);
-  margin-bottom: 30px;
+  width: 68.75rem;
+  gap: 0.75rem;
+  padding: 0.625rem;
+  border-radius: 0.375rem;
+  margin-top: 2.5rem;
+  box-shadow: inset 0px 0.25rem 0.625rem rgba(0, 0, 0, 0.2);
+  margin-bottom: 1.875rem;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
