--- a/src/componentes/pokemonDetail/pokemonDetail.module.css
+++ b/src/componentes/pokemonDetail/pokemonDetail.module.css
@@ -1,7 +1,7 @@
 .container_pd {
   width: 100vw;
   height: 100vh;
-  background-color: azure;
+  background-color: black;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -11,22 +11,85 @@
 }
 
 .container_main_pd {
-  width: 800px;
+  width: 30rem;
   height: 600px;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   display: flex;
-  justify-content: center;
+
   align-items: center;
   flex-direction: column;
 }
 
 .main_img_pd {
+  width: 100%;
+  height: 15rem;
+  /* background-color: red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.main_img_pd_div {
+  width: 50%;
+  height: 12rem;
+  /* background-color: aqua; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 6;
+}
+.main_img_pd img {
   width: 200px;
   height: 200px;
+  margin-top: 3.75rem;
+  position: absolute;
+}
+
+.container_header_pd {
+  width: 100%;
+  height: 2rem;
+  /* background-color: aqua; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.container_nav_pd {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  /* background-color: blue; */
+  align-items: center;
+  gap: 14px;
   margin: 12px;
 }
 
-.main_img_pd img {
+.container_numeral_pd {
+  margin: 12px;
+  font-size: 1.1rem;
+}
+
+.container_nav_pd strong {
+  font-size: 24px;
+}
+
+.container_nav_pd button {
+  border: none;
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.container_nav_pd button:hover {
+  opacity: 0.5;
+}
+
+.about_poke_pd {
   width: 100%;
-  height: 100%;
+  height: 700px;
+  z-index: 5;
+  background-color: #e0e0e0;
+  border-radius: 6px;
 }
