--- a/src/componentes/pokemonDetail/pokemonDetail.module.css
+++ b/src/componentes/pokemonDetail/pokemonDetail.module.css
@@ -1,7 +1,7 @@
 .container_pd {
   width: 100vw;
   height: 100vh;
-  background-color: black;
+  /* background-color: black; */
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -10,9 +10,24 @@
   align-items: center;
 }
 
+.img_background_pd img {
+  width: 180px;
+  height: 180px;
+  left: 54%;
+  bottom: 65%;
+  position: fixed;
+  opacity: 0.2;
+}
+/* @media (min-width: 720px) {
+
+  .container_main_pd {
+    height: 280px;
+  }
+} */
+
 .container_main_pd {
   width: 30rem;
-  height: 600px;
+  height: 95%;
   /* background-color: aquamarine; */
   display: flex;
 
@@ -32,7 +47,7 @@
 
 .main_img_pd_div {
   width: 50%;
-  height: 12rem;
+  height: 11rem;
   /* background-color: aqua; */
   display: flex;
   align-items: center;
@@ -48,7 +63,7 @@
 
 .container_header_pd {
   width: 100%;
-  height: 2rem;
+  height: 3rem;
   /* background-color: aqua; */
   display: flex;
   align-items: center;
@@ -85,11 +100,49 @@
 .container_nav_pd button:hover {
   opacity: 0.5;
 }
-
 .about_poke_pd {
   width: 100%;
   height: 700px;
   z-index: 5;
   background-color: #e0e0e0;
   border-radius: 6px;
+}
+
+.about_type_pd {
+  width: 100%;
+  height: 2rem;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: red; */
+  gap: 12px;
+}
+
+/* Estos estilos corresponden a la card Type */
+
+.cardType {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  height: 1.5rem;
+  padding: 8px;
+  border-radius: 1.8rem;
+  background-color: rgb(128, 131, 131);
+}
+
+.about_pd {
+  width: 100%;
+  height: 2rem;
+  margin-top: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about_pd strong {
+  font-size: 1.1rem;
+  color: green;
+  font-weight: 800;
 }
