--- a/src/componentes/Inicio/homeStyles.module.css
+++ b/src/componentes/Inicio/homeStyles.module.css
@@ -29,11 +29,11 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 68.75rem;
+  width: 82%;
   gap: 0.75rem;
   padding: 0.625rem;
   border-radius: 0.375rem;
-  margin-top: 2.5rem;
+  margin-top: 2rem;
   box-shadow: inset 0px 0.25rem 0.625rem rgba(0, 0, 0, 0.2);
   margin-bottom: 1.875rem;
   transition: background-color 0.3s ease, color 0.3s ease;
