--- a/src/componentes/card/cardStyles.module.css
+++ b/src/componentes/card/cardStyles.module.css
@@ -23,7 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  object-fit: cover;
+  object-fit: contain;
   overflow: hidden;
   position: relative;
 }
@@ -31,6 +31,7 @@
 .card_sec_img img {
   width: 120px;
   height: 120px;
+  object-fit: contain;
 }
 
 .card_sec_title {
