--- a/src/componentes/Inicio/homeStyles.module.css
+++ b/src/componentes/Inicio/homeStyles.module.css
@@ -33,7 +33,7 @@
   gap: 0.75rem;
   padding: 0.625rem;
   border-radius: 0.375rem;
-  margin-top: 2rem;
+  margin-top: 1.2rem;
   box-shadow: inset 0px 0.25rem 0.625rem rgba(0, 0, 0, 0.2);
   margin-bottom: 1.875rem;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -45,4 +45,39 @@
 
 .lightTheme {
   background-color: var(--lightThemeThings);
+}
+
+.lightTheme_btn {
+  background-color: var(--lightTheme);
+}
+.darkTheme_btn {
+  background-color: var(--darkTheme);
+}
+.btn_loadMore {
+  width: 10rem;
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 2px 8px;
+  transition: all 0.5s;
+}
+
+.container_btn_loadMore {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.1s ease-in-out;
+}
+
+.container_btn_loadMore button {
+  width: 10rem;
+}
+
+.container_btn_loadMore button:hover {
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  opacity: 0.5;
 }
