--- a/src/componentes/pokemonDetail/pokemonDetail.module.css
+++ b/src/componentes/pokemonDetail/pokemonDetail.module.css
@@ -47,7 +47,7 @@
 
 .main_img_pd_div {
   width: 50%;
-  height: 11rem;
+  height: auto;
   /* background-color: aqua; */
   display: flex;
   align-items: center;
@@ -57,7 +57,7 @@
 .main_img_pd img {
   width: 200px;
   height: 200px;
-  margin-top: 3.75rem;
+  margin-top: 3.6rem;
   position: absolute;
 }
 
@@ -108,12 +108,18 @@
 .about_type_pd {
   width: 100%;
   height: 2rem;
-  margin-top: 2rem;
+  margin-top: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
   /* background-color: red; */
   gap: 12px;
+}
+
+@media (min-height: 720px) {
+  .main_img_pd img {
+    margin-top: 2rem;
+  }
 }
 
 /* Estos estilos corresponden a la card Type */
@@ -317,10 +323,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 14px;
+  gap: 12px;
+  padding: 6px;
 }
 
 .container_line span {
+  width: 22px;
   color: rgb(167, 167, 167);
   font-size: 14px;
 }
