--- a/src/componentes/Inicio/homeStyles.module.css
+++ b/src/componentes/Inicio/homeStyles.module.css
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 .container_div_home_light {
@@ -22,6 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -33,7 +35,7 @@
   gap: 0.75rem;
   padding: 0.625rem;
   border-radius: 0.375rem;
-  margin-top: 1.2rem;
+  /* margin-top: 1.4rem; */
   box-shadow: inset 0px 0.25rem 0.625rem rgba(0, 0, 0, 0.2);
   margin-bottom: 1.875rem;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -75,9 +77,29 @@
 
 .container_btn_loadMore button {
   width: 10rem;
+  cursor: pointer;
 }
 
 .container_btn_loadMore button:hover {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   opacity: 0.5;
+}
+
+.containerSectionType {
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.containerSectionType section {
+  width: 85%;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  overflow-y: none;
+  overflow-x: scroll;
+  white-space: nowrap;
+  margin-bottom: 0.8rem;
 }
