--- a/src/componentes/card/cardStyles.module.css
+++ b/src/componentes/card/cardStyles.module.css
@@ -35,7 +35,7 @@
 }
 
 .card_sec_title {
-  width: 200px;
+  width: 100%;
   height: 40px;
   background-color: #e6e4e4;
   overflow: hidden;
@@ -55,7 +55,7 @@
 
 .card_span_id {
   position: absolute;
-  color: #8a8a8a;
+
   top: 0;
   right: 0;
   font-size: 14px;
@@ -123,55 +123,73 @@
 
 .border_grass {
   border: 1px solid #74cb48;
+  color: #74cb48;
 }
 .border_fire {
   border: 1px solid #f57d31;
+  color: #f57d31;
 }
 .border_water {
   border: 1px solid #6493eb;
+  color: #6493eb;
 }
 .border_electric {
   border: 1px solid #f9cf30;
+  color: #f9cf30;
 }
 .border_poison {
   border: 1px solid #a43e9e;
+  color: #a43e9e;
 }
 .border_normal {
   border: 1px solid #aaa67f;
+  color: #aaa67f;
 }
 .border_flying {
   border: 1px solid #a891ec;
+  color: #a891ec;
 }
 .border_bug {
   border: 1px solid #a7b723;
+  color: #a7b723;
 }
 .border_fighting {
   border: 1px solid #c12239;
+  color: #c12239;
 }
 .border_ground {
   border: 1px solid #dec16b;
+  color: #dec16b;
 }
 .border_rock {
   border: 1px solid #b69e31;
+  color: #b69e31;
 }
 .border_dark {
   border: 1px solid #75574c;
+  color: #75574c;
 }
 .border_dragon {
   border: 1px solid #7037ff;
+  color: #7037ff;
 }
 .border_fairy {
   border: 1px solid #e69eac;
+  color: #e69eac;
 }
 .border_steel {
   border: 1px solid #b7b9d0;
+  color: #b7b9d0;
 }
 .border_ghost {
   border: 1px solid #70559b;
+  color: #70559b;
 }
 .border_psychic {
   border: 1px solid #fb5584;
+  color: #fb5584;
 }
 .border_ice {
   border: 1px solid #9ad6df;
+  color: #9ad6df;
 }
