--- a/src/componentes/pokemonDetail/pokemonDetail.module.css
+++ b/src/componentes/pokemonDetail/pokemonDetail.module.css
@@ -14,7 +14,7 @@
   width: 180px;
   height: 180px;
   left: 54%;
-  bottom: 65%;
+  bottom: 69%;
   position: fixed;
   opacity: 0.2;
 }
@@ -91,6 +91,7 @@
   display: flex;
   justify-content: center;
   align-self: center;
+  cursor: pointer;
 }
 
 .container_nav_pd button:hover {
