--- a/src/componentes/pokemonDetail/pokemonDetail.module.css
+++ b/src/componentes/pokemonDetail/pokemonDetail.module.css
@@ -145,6 +145,12 @@
   align-items: center;
 }
 
+@media (max-width: 1280px) {
+  .about_pd {
+    margin-top: 0;
+  }
+}
+
 .about_pd strong {
   font-size: 1.1rem;
 }
