--- a/src/componentes/pokemonDetail/pokemonDetail.module.css
+++ b/src/componentes/pokemonDetail/pokemonDetail.module.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .img_background_pd img {
@@ -30,7 +31,7 @@
   height: 95%;
   /* background-color: aquamarine; */
   display: flex;
-
+  overflow: hidden;
   align-items: center;
   flex-direction: column;
 }
@@ -99,11 +100,12 @@
 }
 .about_poke_pd {
   width: 100%;
-  height: 700px;
   z-index: 5;
   background-color: #e0e0e0;
   border-radius: 6px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
+  min-height: 26.375rem;
+  min-width: 30rem;
 }
 
 .about_type_pd {
